--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button>
                 <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/?l=portuguese" target="_blank">Sim</a>
             </button>
-            <button id="no"><a href="#">Não</a></button>
+            <button id="no">Não</button>
         </div>
     </div>
     <script src="script.js"></script>
